Updated Broken Link

--- a/campus.html
+++ b/campus.html
@@ -111,7 +111,7 @@
             <div class="footer__logo-box">
 
                 <picture class="footer__logo">
-                    <img src="/img/LOGO.png" class="footer__logo-pic">
+                    <img src="https://i.ibb.co/k0h8xMD/LOGO.png" class="footer__logo-pic">
                 </picture>
 
             </div>
